# ordmask-rust

./: Cargo.toml  README.md  README_CN.md
src/: error.rs  lib.rs  macros.rs  min_value.rs  ops.rs  ordmask.rs  prelude.rs  utils.rs  with_min.rs
src/ordmask/: construct.rs  convert.rs  error.rs  macros.rs  mod.rs  operations.rs  ops.rs  spans.rs
src/ordmask/iter/: mod.rs  spans.rs  values.rs  values_count.rs
src/traits/: countable.rs  mod.rs  ordered_sub.rs  with_max.rs  with_min.rs  with_one.rs  with_zero.rs
tests/: custom_type_sum_size.rs  custom_type_values_count.rs  iter.rs  macro.rs  serde.rs  simplify.rs  spans.rs
tests/operations/: complement.rs  difference.rs  intersection.rs  minus.rs  mod.rs  union.rs
